--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
           <link rel="stylesheet" href="general.css">
           <link rel="stylesheet" href="ekphrasis.css">
           <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+          <link rel="icon" href="leaf.ico">
      </head>
      <body>
           <header>
