--- a/periodi.html
+++ b/periodi.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="it">
      <head>
-          <title>ἔκϕρασις</title>
+          <title>Periodi</title>
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
           <link rel="stylesheet" href="general.css">
           <link rel="stylesheet" href="ekphrasis.css">
           <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+          <link rel="icon" href="leaf.ico">
      </head>
      <body>
           <header>
