--- a/testo-oggetto.html
+++ b/testo-oggetto.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="it">
      <head>
-          <title>ἔκϕρασις</title>
+          <title>Dal testo all'oggetto</title>
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="keywords" content="literature, art, descriptions">
@@ -9,6 +9,7 @@
           <link rel="stylesheet" href="general.css">
           <link rel="stylesheet" href="testo-obj.css">
           <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+          <link rel="icon" href="leaf.ico">
      </head>
      <body>
           <header>
